<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="@dimen/normal_padding"
    android:theme="@style/EditFormStyle"
    >

  <com.wordpress.laaptu.dependencyinjection.widgets.EditFormTextInputLayout
      android:id="@+id/text_input_name"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      >

    <EditText
        android:id="@+id/txt_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/enter_your_name"
        android:imeOptions="actionNext"
        android:inputType="text"
        />

  </com.wordpress.laaptu.dependencyinjection.widgets.EditFormTextInputLayout>

  <com.wordpress.laaptu.dependencyinjection.widgets.EditFormTextInputLayout
      android:id="@+id/text_input_email"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_marginTop="@dimen/margin_top"
      >

    <EditText
        android:id="@+id/txt_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/enter_your_email"
        android:imeOptions="actionNext"
        android:inputType="textEmailAddress"
        />

  </com.wordpress.laaptu.dependencyinjection.widgets.EditFormTextInputLayout>

  <com.wordpress.laaptu.dependencyinjection.widgets.EditFormTextInputLayout
      android:id="@+id/text_input_address"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_marginTop="@dimen/margin_top"
      >

    <EditText
        android:id="@+id/txt_address"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/enter_your_address"
        android:imeOptions="actionNext"
        android:inputType="text"
        />

  </com.wordpress.laaptu.dependencyinjection.widgets.EditFormTextInputLayout>

  <com.wordpress.laaptu.dependencyinjection.widgets.EditFormTextInputLayout
      android:id="@+id/text_input_phone"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_marginTop="@dimen/margin_top"
      >

    <EditText
        android:id="@+id/txt_phone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/enter_your_phone"
        android:imeOptions="actionDone"
        android:inputType="phone"
        />

  </com.wordpress.laaptu.dependencyinjection.widgets.EditFormTextInputLayout>
</LinearLayout>